--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,6 +12,9 @@
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 body {
@@ -53,7 +56,7 @@ code {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  width: 100%;
   color: white;
 }
 
