--- a/frontend/src/components/HomePage.css
+++ b/frontend/src/components/HomePage.css
@@ -9,7 +9,7 @@
 
 .home-header {
   text-align: center;
-  margin-bottom: var(--spacing-3xl);
+  margin-bottom: 16px;
 }
 
 .header-icon {
@@ -1067,7 +1067,7 @@
 /* Search Bar */
 .search-bar-container {
   position: relative;
-  margin-top: 16px;
+  margin-top: 28px;
   display: flex;
   align-items: center;
 }
